--- a/wordle/style.css
+++ b/wordle/style.css
@@ -1,4 +1,4 @@
-/* /*
+/* */
 body {
 background: #EEAECA;
 background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(226, 176, 179, 1) 15%, rgba(212, 178, 178, 1) 32%, rgba(206, 178, 209, 1) 52%, rgba(207, 191, 178, 1) 68%, rgba(176, 196, 207, 1) 85%, rgba(148, 187, 233, 1) 100%);
